# transport-core

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  release-please-config.json  release-plz.toml
.claude/: settings.json  settings.local.json
crates/transport_core/: CHANGELOG.md  Cargo.toml  README.md
crates/transport_core/src/: lib.rs
crates/transport_core/tests/: integration.rs
docs/: MoldUDP64.md  SoupBinTCPCompressed.md
lat.md/: lat.md
src/: config.rs  ext.rs  lib.rs  transport.rs
src/testing/: conformance.rs  mock_peer.rs
tests/: config_serde.rs  error_display.rs  ext_traits.rs  trait_shape.rs
