[package]
name = "transport_core"
description = "Transport trait + BufferPool contract for Polaris networking stack"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
